Links about fixed on mobile

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -68,4 +68,9 @@ ul{
         display: block;
     }
 
+    #formacao-link{
+        margin-left: 4vw;
+
+    }
+
 }
